--- a/WebForm/Pages/Shared/QuanLyKhachHang_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Sua.cshtml
@@ -4,7 +4,10 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-
+@using BUS;
+@{
+    KhachHangBUS bus = new KhachHangBUS();
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
