--- a/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
+@using BUS;
+@{
+    KhachHangBUS bus = new KhachHangBUS();
+}
 
 <div class="main-panel">
     <div class="content-wrapper">
