--- a/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
@@ -2,9 +2,12 @@
 @model WebForm.Pages.Shared.QuanLyPhanCong_ThemModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
-    Layout = "QuanLyPhanCong";
+    Layout = "_Layout";
 }
-
+@using BUS;
+@{
+    PhanCongBUS bus = new PhanCongBUS();
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
