--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -7,7 +7,7 @@
 }
 @using BUS;
 @using DTO;
-@using Microsoft.AspNetCore.Http; 
+@using Microsoft.AspNetCore.Http;
 @{
     List<DiaDiemDTO> list_dd = new List<DiaDiemDTO>();
     DiaDiemBUS bus_dd = new DiaDiemBUS();
@@ -59,12 +59,12 @@
                                                 <td>@item.Id_DiaDiem</td>
                                                 <td>@item.Ten_DiaDiem</td>
                                                 <form asp- method="post">
-                                                <td>
-                                                    <input type="hidden" asp-for="diadiem.Id_DiaDiem" value="@item.Id_DiaDiem" />
-                                                    <input type="hidden" asp-for="diadiem.Ten_DiaDiem" value="@item.Ten_DiaDiem" />
-                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
-                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-warning" />
-                                                </td>
+                                                    <td>
+                                                        <input type="hidden" asp-for="diadiem.Id_DiaDiem" value="@item.Id_DiaDiem" />
+                                                        <input type="hidden" asp-for="diadiem.Ten_DiaDiem" value="@item.Ten_DiaDiem" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                    </td>
                                                 </form>
                                             </tr>
                                         }
@@ -78,27 +78,3 @@
         </div>
     </div>
 </div>
-
-<!-- Form thêm -->
-<dialog id="them-tour" style="display:none">
-    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-        <h4>Thêm Tour</h4>
-        <form class="pt-3">
-            <div class="form-group">
-                
-                <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Địa Điểm" >
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Địa Điểm" >
-            </div>
-            <div class="mt-3">
-                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
-                    Thêm
-                </a>
-                <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
-                    Hủy
-                </a>
-            </div>
-        </form>
-    </div>
-</dialog>
