--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -7,6 +7,7 @@
 }
 @using BUS;
 @using DTO;
+@using Microsoft.AspNetCore.Http;
 @{
     List<KhachDTO> list_kh = new List<KhachDTO>();
     KhachHangBUS bus_kh = new KhachHangBUS();
@@ -21,10 +22,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Khách hàng</h4>
                         <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="ThemKhachHang()">
+                            <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyKhachHang_Them">
                                 Thêm
-                            </button>
-                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
+                            </a>
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -52,10 +52,19 @@
                                                 <td>@item.Gioitinh_Khach</td>
                                                 <td>@item.Sdt_Khach</td>
                                                 <td>@item.Quoctich</td>
-                                                <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger" onclick="return confirm('Bạn có chắc chắn xóa khách hàng này không?');">Xóa</button>
-                                                </td>
+                                                <form asp- method="post">
+                                                    <td>
+                                                        <input type="hidden" asp-for="khachhang.Id_Khach" value="@item.Id_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Hoten_Khach" value="@item.Hoten_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Cmnd_Khach" value="@item.Cmnd_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Diachi_Khach" value="@item.Diachi_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Gioitinh_Khach" value="@item.Gioitinh_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Sdt_Khach" value="@item.Sdt_Khach" />
+                                                        <input type="hidden" asp-for="khachhang.Quoctich" value="@item.Quoctich" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                    </td>
+                                                </form>
                                             </tr>
                                         }
                                     }
