Update KH, NV, PhanCong các thao tác - Hung

--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -38,9 +38,7 @@
                             }
                             catch (Exception e) { }
                         }
-                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyDiaDiem_Them">
-                            Thêm
-                        </a>
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyDiaDiem_Them">Thêm</a>
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
