--- a/WebForm/Pages/Shared/QuanLyKhachHang_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Sua.cshtml
@@ -18,7 +18,7 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Khách Hàng</h4>
+                        <h4 class="card-title">Sửa Khách Hàng</h4>
                         <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Khách hàng</label>
@@ -48,7 +48,8 @@
                                 <label for="exampleInputName1">Quốc tịch</label>
                                 <input type="text" class="form-control" asp-for="khachhang.Quoctich" value="@obj.Quoctich" placeholder="Quốc tịch">
                             </div>
-                            <input type="submit" value="Thêm" asp-page-handler="AddKhachHang" class="btn btn-primary mr-2" />
+                            
+                            <input type="submit" value="Sửa" asp-page-handler="AddKhachHang" class="btn btn-primary mr-2" />
                             <a class="btn btn-light">Hủy</a>
                         </form>
                     </div>
