--- a/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
@@ -45,6 +45,10 @@
                                 <label for="exampleInputName1">Quốc tịch</label>
                                 <input type="text" class="form-control" asp-for="khachhang.Quoctich" placeholder="Quốc tịch">
                             </div>
+                            <div class="form-group">
+                                <label for="exampleInputName1">Tình trạng</label>
+                                <input type="text" class="form-control" asp-for="khachhang.Tinh_Trang" value="1" placeholder="1" readonly>
+                            </div>
                             <input type="submit" value="Thêm" asp-page-handler="AddKhachHang" class="btn btn-primary mr-2" />
                             <a class="btn btn-light">Hủy</a>
                         </form>
