--- a/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
@@ -7,6 +7,7 @@
 }
 @using BUS;
 @using DTO;
+@using Microsoft.AspNetCore.Http;
 @{
     List<NhanVienDTO> list_nv = new List<NhanVienDTO>();
     NhanVienBUS bus_nv = new NhanVienBUS();
@@ -48,10 +49,17 @@
                                                 <td>@item.Email_NV</td>
                                                 <td>@item.Sdt_NV</td>
                                                 <td>@item.Gioitinh_NV</td>
-                                                <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
-                                                </td>
+                                                <form asp- method="post">
+                                                    <td>
+                                                        <input type="hidden" asp-for="nhanvien.Id_NV" value="@item.Id_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Hoten_NV" value="@item.Hoten_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Email_NV" value="@item.Email_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Sdt_NV" value="@item.Sdt_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Gioitinh_NV" value="@item.Gioitinh_NV" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                    </td>
+                                                </form>
                                             </tr>
                                         }
                                     }
