--- a/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-@using BUS;
+@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;
+@using DTO;
 @{
-    NhanVienBUS bus = new NhanVienBUS();
+    var str = HttpContext.Session.GetString("editnhanvien");
+    var obj = JsonConvert.DeserializeObject<NhanVienDTO>(str);
 }
 <div class="main-panel">
     <div class="content-wrapper">
@@ -14,29 +17,34 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Nhân Viên</h4>
+                        <h4 class="card-title">Sửa Nhân Viên</h4>
                         <form class="forms-sample">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" placeholder="Mã Nhân Viên">
+                                <input type="text" class="form-control" asp-for="nhanvien.Id_NV" value="@obj.Id_NV" 
+                                       placeholder="Mã Nhân Viên" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Họ tên</label>
-                                <input type="text" class="form-control" placeholder="Họ tên">
+                                <input type="text" class="form-control" asp-for="nhanvien.Hoten_NV" value="@obj.Hoten_NV"
+                                       placeholder="Họ tên">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Email</label>
-                                <input type="text" class="form-control" placeholder="Email">
+                                <input type="text" class="form-control" asp-for="nhanvien.Email_NV" value="@obj.Email_NV"
+                                       placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="text" class="form-control" placeholder="Số điện thoại">
+                                <input type="text" class="form-control" asp-for="nhanvien.Sdt_NV" value="@obj.Sdt_NV"
+                                       placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
-                                <input type="text" class="form-control" placeholder="Giới tính">
+                                <input type="text" class="form-control" asp-for="nhanvien.Gioitinh_NV" value="@obj.Gioitinh_NV"
+                                       placeholder="Giới tính">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Sửa</button>
+                            <input type="submit" value="Sửa" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
