--- a/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
@@ -18,25 +18,30 @@
                         <form class="forms-sample">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" placeholder="Mã Nhân Viên">
+                                <input type="text" class="form-control" value="@bus.MakeID()" asp-for="nhanvien.Id_NV"
+                                       placeholder="Mã Nhân Viên" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Họ tên</label>
-                                <input type="text" class="form-control" placeholder="Họ tên">
+                                <input type="text" class="form-control" asp-for="nhanvien.Hoten_NV" placeholder="Họ tên">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Email</label>
-                                <input type="text" class="form-control" placeholder="Email">
+                                <input type="text" class="form-control" asp-for="nhanvien.Email_NV" placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="text" class="form-control" placeholder="Số điện thoại">
+                                <input type="text" class="form-control" asp-for="nhanvien.Sdt_NV" placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
-                                <input type="text" class="form-control" placeholder="Giới tính">
+                                <input type="text" class="form-control" asp-for="nhanvien.Gioitinh_NV" placeholder="Giới tính">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
+                            <div class="form-group">
+                                <label for="exampleInputName1">Tình trạng</label>
+                                <input type="text" class="form-control" asp-for="nhanvien.Tinh_Trang" value="1" placeholder="1" readonly>
+                            </div>
+                            <input type="submit" value="Thêm" asp-page-handler="AddNhanVien" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
