--- a/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-@using BUS;
+@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;
+@using DTO;
 @{
-    PhanCongBUS bus = new PhanCongBUS();
+    var str = HttpContext.Session.GetString("editphancong");
+    var obj = JsonConvert.DeserializeObject<PhanCongDTO>(str);
 }
 <div class="main-panel">
     <div class="content-wrapper">
@@ -14,19 +17,22 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Phân Công</h4>
+                        <h4 class="card-title">Sửa Phân Công</h4>
                         <form class="forms-sample">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" class="form-control" placeholder="Mã Đoàn">
+                                <input type="text" class="form-control" asp-for="phancong.Id_Doan" value="@obj.Id_Doan" 
+                                       placeholder="Mã Đoàn" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" placeholder="Mã Nhân Viên">
+                                <input type="text" class="form-control" asp-for="phancong.Id_NV" value="@obj.Id_NV"
+                                       placeholder="Mã Nhân Viên" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
-                                <input type="text" class="form-control" placeholder="Nhiệm vụ">
+                                <input type="text" class="form-control" asp-for="phancong.Nhiemvu" value="@obj.Nhiemvu" 
+                                       placeholder="Nhiệm vụ">
                             </div>
                             <button type="submit" class="btn btn-primary mr-2">Sửa</button>
                             <button class="btn btn-light">Hủy</button>
