--- a/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
@@ -18,17 +18,19 @@
                         <form class="forms-sample">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" class="form-control" placeholder="Mã Đoàn">
+                                <input type="text" class="form-control" asp-for="phancong.Id_Doan"
+                                       placeholder="Mã Đoàn" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" placeholder="Mã Nhân Viên">
+                                <input type="text" class="form-control" asp-for="phancong.Id_NV" 
+                                       placeholder="Mã Nhân Viên" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
-                                <input type="text" class="form-control" placeholder="Nhiệm vụ">
+                                <input type="text" class="form-control" asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
+                            <input type="submit" value="Thêm" asp-page-handler="AddPhanCong" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
