--- a/WebForm/Pages/Shared/QuanLyTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour.cshtml
@@ -7,6 +7,7 @@
 }
 @using BUS;
 @using DTO;
+@using Microsoft.AspNetCore.Http;
 @{
     List<TourDTO> list = new List<TourDTO>();
     List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
@@ -23,6 +24,23 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Tour</h4>
+                        @{
+                            try
+                            {
+                                if (HttpContext.Session.GetString("xoatour") == "thanhcong")
+                                {
+                                    <h5 style="background-color: forestgreen">Xóa thành công</h5>
+                                    HttpContext.Session.Remove("xoatour");
+                                }
+                                else if (HttpContext.Session.GetString("xoatour") == "khongthanhcong")
+                                {
+                                    <h5 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h5>
+                                    HttpContext.Session.Remove("xoatour");
+                                }
+
+                            }
+                            catch (Exception e) { }
+                        }
                         <form class="form-inline">
                             <button type="button" class="btn btn-primary mb-2" onclick="btnclick()">
                                 Thêm
@@ -51,8 +69,15 @@
                                                 <td>@item.Dacdiem_Tour</td>
                                                 <td>@tenloai</td>
                                                 <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                    <form method="post">
+                                                    <input type="hidden" asp-for="tour.Id_Tour" value="@item.Id_Tour" />
+                                                    <input type="hidden" asp-for="tour.Ten_Tour" value="@item.Ten_Tour" />
+                                                    <input type="hidden" asp-for="tour.Dacdiem_Tour" value="@item.Dacdiem_Tour" />
+                                                    <input type="hidden" asp-for="tour.Id_Loai" value="@item.Id_Loai" />
+                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                    <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
+                                                     </form>
                                                 </td>
                                             </tr>
                                         }
