--- a/WebForm/Pages/Shared/ThongKeTour.cshtml
+++ b/WebForm/Pages/Shared/ThongKeTour.cshtml
@@ -11,21 +11,25 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thống kê Chi tiết Tour</h4>
+                        <h4 class="card-title">Thống kê Tour</h4>
                         <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian bắt đầu">
                         <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian kết thúc">
                         <form class="forms-sample" method="post">
                             <div class="form-group">
-                                <label for="exampleInputName1">Mã địa điểm</label>
-                                <input type="text" class="form-control" placeholder="Mã địa điểm" readonly>
+                                <label for="exampleInputName1">Mã Tour</label>
+                                <input type="text" class="form-control" placeholder="Mã Tour" readonly>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputName1">Tên địa điểm</label>
-                                <input type="text" class="form-control" placeholder="Tên địa điểm" readonly>
+                                <label for="exampleInputName1">Tên Tour</label>
+                                <input type="text" class="form-control" placeholder="Tên Tour" readonly>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputName1">Thứ tự</label>
-                                <input type="text" class="form-control" placeholder="Thứ tự" readonly>
+                                <label for="exampleInputName1">Mô Tả</label>
+                                <input type="text" class="form-control" placeholder="Mô Tả" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputName1">Loại Tour</label>
+                                <input type="text" class="form-control" placeholder="Loại Tour" readonly>
                             </div>
                             <input type="submit" value="Tìm" class="btn btn-primary mr-2" />
                             <a class="btn btn-light">Hủy</a>
@@ -38,9 +42,9 @@
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th>aaa</th>
-                                        <th>bbb</th>
-                                        <th>ccc</th>
+                                        <th>Mã địa điểm</th>
+                                        <th>Tên địa điểm</th>
+                                        <th>Thứ tự</th>
                                     </tr>
                                 </thead>
                                 <tbody>
