update web QL chitiet Tour - Hung

--- a/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
@@ -8,7 +8,7 @@
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
-            <div class="col-lg-12 grid-margin stretch-card">
+            <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách chi tiết Tour</h4>
@@ -43,6 +43,39 @@
                                             <input type="submit" value="Sửa" class="btn btn-warning" />
                                             <input type="submit" value="Xóa" class="btn btn-danger" />
                                         </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Thống kê Tour</h4>
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>ID Tour</th>
+                                        <th>Tên Tour</th>
+                                        <th>Đặc điểm</th>
+                                        <th>ID Loại</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Jacob</td>
+                                        <td>Photoshop</td>
+                                        <td>Jacob</td>
+                                        <td>Photoshop</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Jacob</td>
+                                        <td>Photoshop</td>
+                                        <td>Jacob</td>
+                                        <td>Photoshop</td>
                                     </tr>
                                 </tbody>
                             </table>
