--- a/WebForm/Pages/Shared/QuanLyTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour.cshtml
@@ -13,7 +13,7 @@
     List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
     TourBUS bus = new TourBUS();
     LoaiTourBUS busloai = new LoaiTourBUS();
-    list = bus.List();
+    list = bus.List().FindAll(x => x.Tinh_Trang.Equals(1));
     listloai = busloai.List();
 }
 
@@ -29,23 +29,22 @@
                             {
                                 if (HttpContext.Session.GetString("xoatour") == "thanhcong")
                                 {
-                                    <h5 style="background-color: forestgreen">Xóa thành công</h5>
+                                    <h4 style="background-color: forestgreen">Xóa thành công</h4>
                                     HttpContext.Session.Remove("xoatour");
                                 }
                                 else if (HttpContext.Session.GetString("xoatour") == "khongthanhcong")
                                 {
-                                    <h5 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h5>
+                                    <h4 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h4>
                                     HttpContext.Session.Remove("xoatour");
                                 }
 
                             }
                             catch (Exception e) { }
                         }
-                        <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="btnclick()">
-                                Thêm
-                            </button>
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyTour_Them">Thêm</a>
+                        <form class="form-inline" method="get">
                             <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
+                            <input type="button" class="btn btn-warning" value="Tìm" style="margin-left:" id="inlineFormInputName2" >
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -70,14 +69,14 @@
                                                 <td>@tenloai</td>
                                                 <td>
                                                     <form method="post">
-                                                    <input type="hidden" asp-for="tour.Id_Tour" value="@item.Id_Tour" />
-                                                    <input type="hidden" asp-for="tour.Ten_Tour" value="@item.Ten_Tour" />
-                                                    <input type="hidden" asp-for="tour.Dacdiem_Tour" value="@item.Dacdiem_Tour" />
-                                                    <input type="hidden" asp-for="tour.Id_Loai" value="@item.Id_Loai" />
-                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
-                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
-                                                    <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
-                                                     </form>
+                                                        <input type="hidden" asp-for="tour.Id_Tour" value="@item.Id_Tour" />
+                                                        <input type="hidden" asp-for="tour.Ten_Tour" value="@item.Ten_Tour" />
+                                                        <input type="hidden" asp-for="tour.Dacdiem_Tour" value="@item.Dacdiem_Tour" />
+                                                        <input type="hidden" asp-for="tour.Id_Loai" value="@item.Id_Loai" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
+                                                    </form>
                                                 </td>
                                             </tr>
                                         }
