--- a/WebForm/Pages/Shared/QuanLyTour_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour_Them.cshtml
@@ -2,7 +2,11 @@
 @model WebForm.Pages.Shared.QuanLyTour_ThemModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
-    Layout = "QuanLyTour";
+    Layout = "_Layout";
+}
+@using BUS;
+@{
+    TourBUS bus = new TourBUS();
 }
 <div class="main-panel">
     <div class="content-wrapper">
@@ -11,25 +15,28 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Tour</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" placeholder="Mã Tour">
+                                <input type="text" asp-for="tour.Id_Tour" value="@bus.MakeID()" class="form-control" placeholder="Mã Tour" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Tour</label>
-                                <input type="text" class="form-control" placeholder="Tên Tour">
+                                <input type="text" asp-for="tour.Ten_Tour" class="form-control" placeholder="Tên Tour">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Đặc điểm</label>
-                                <input type="text" class="form-control" placeholder="Đặc điểm">
+                                <input type="text" asp-for="tour.Dacdiem_Tour" class="form-control" placeholder="Đặc điểm">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Loại</label>
-                                <input type="text" class="form-control" placeholder="Mã Loại">
+                                <select asp-for="tour.Id_Loai" asp-items="@(new SelectList(Model.listloai,"Id_Loai", "Ten_Loai"))">
+                                    <option value="">Chọn Loại</option>
+                                </select>
+
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
-                            <button class="btn btn-light">Hủy</button>
+                            <input type="submit" asp-page-handler="Add" value="Thêm" class="btn btn-primary mr-2" />
+                            <input type="submit" asp-page-handler="Cancel" class="btn btn-light" value="Hủy" />
                         </form>
                     </div>
                 </div>
