--- a/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
@@ -18,7 +18,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Sửa Nhân Viên</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
                                 <input type="text" class="form-control" asp-for="nhanvien.Id_NV" value="@obj.Id_NV" 
