--- a/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Nhân Viên</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
                                 <input type="text" class="form-control" value="@bus.MakeID()" asp-for="nhanvien.Id_NV"
@@ -35,7 +35,10 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Gioitinh_NV" placeholder="Giới tính">
+                                <select class="form-control" asp-for="nhanvien.Gioitinh_NV">
+                                    <option value="Nam">Nam</option>
+                                    <option value="Nu">Nữ</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tình trạng</label>
