--- a/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
@@ -4,7 +4,14 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-
+@using BUS;
+@using DTO;
+@using Microsoft.AspNetCore.Http;
+@{ 
+    string idtour = HttpContext.Session.GetString("chitiettour");
+    List<ChiTietTourDTO> list = new ChiTietTourBUS().List(idtour);
+    List<DiaDiemDTO> listdiadiem = new DiaDiemBUS().List();
+}   
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -12,9 +19,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách chi tiết Tour</h4>
-                        <button type="button" class="btn btn-primary mb-2" onclick="btnclick()">
-                            Thêm
-                        </button>
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyChiTietTour_Them">Thêm</a>
                         <div class="table-responsive">
                             <table class="table">
                                 <thead>
@@ -26,24 +31,26 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>Jacob</td>
-                                        <td>53275531</td>
-                                        <td>12 May 2017</td>
-                                        <td>
-                                            <input type="submit" value="Sửa" class="btn btn-warning" />
-                                            <input type="submit" value="Xóa" class="btn btn-danger" />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Messsy</td>
-                                        <td>53275532</td>
-                                        <td>15 May 2017</td>
-                                        <td>
-                                            <input type="submit" value="Sửa" class="btn btn-warning" />
-                                            <input type="submit" value="Xóa" class="btn btn-danger" />
-                                        </td>
-                                    </tr>
+                                    @{ foreach (ChiTietTourDTO item in list)
+                                        {
+                                            string tendiadiem = listdiadiem.Find(x => x.Id_DiaDiem.Equals(item.Id_DiaDiem)).Ten_DiaDiem;
+                                            <tr>
+                                                <td>@item.Id_DiaDiem</td>
+                                                <td>@tendiadiem</td>
+                                                <td>@item.Thutu</td>
+                                                <td>
+                                                    <form method="post">
+                                                        <input type="hidden" asp-for="chitiet.Id_DiaDiem" value="@item.Id_DiaDiem" />
+                                                        <input type="hidden" asp-for="chitiet.Id_Tour" value="@item.Id_Tour" />
+                                                        <input type="hidden" asp-for="chitiet.Id_DiaDiem" value="@item.Id_DiaDiem" />
+                                                        <input type="hidden" asp-for="chitiet.Thutu" value="@item.Thutu" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
                                 </tbody>
                             </table>
                         </div>
