--- a/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
@@ -18,8 +18,14 @@
                                 <input type="text" class="form-control" placeholder="Mã Tour">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputName1">Địa Điểm</label>
-                                <input type="text" class="form-control" placeholder="Địa Điểm">
+                                <label>Địa Điểm</label>
+                                <select class="js-example-basic-single w-100">
+                                    <option value="AL">Alabama</option>
+                                    <option value="WY">Wyoming</option>
+                                    <option value="AM">America</option>
+                                    <option value="CA">Canada</option>
+                                    <option value="RU">Russia</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thứ tự</label>
