--- a/WebForm/Pages/Shared/QuanLyTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour.cshtml
@@ -75,7 +75,7 @@
                                                         <input type="hidden" asp-for="tour.Id_Loai" value="@item.Id_Loai" />
                                                         <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
                                                         <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
-                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
+                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-primary" />
                                                     </form>
                                                 </td>
                                             </tr>
