--- a/WebForm/Pages/Shared/QuanLyDoan.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan.cshtml
@@ -21,9 +21,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Đoàn Du Lịch</h4>
                         <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="ThemDoan()">
-                                Thêm
-                            </button>
+                            <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyDoan_Them">Thêm</a>
                             <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
                         </form>
                         <div class="table-responsive">
@@ -53,8 +51,18 @@
                                                 <td>@item.Doanhthu</td>
                                                 <td>@item.Noidung</td>
                                                 <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                    <form method="post">
+                                                        <input type="hidden" asp-for="doan.Id_Tour" value="@item.Id_Doan" />
+                                                        <input type="hidden" asp-for="doan.Ten_Doan" value="@item.Ten_Doan" />
+                                                        <input type="hidden" asp-for="doan.Id_Tour" value="@item.Id_Tour" />
+                                                        <input type="hidden" asp-for="doan.Ngaykhoihanh" value="@item.Ngaykhoihanh" />
+                                                        <input type="hidden" asp-for="doan.Ngayketthuc" value="@item.Ngayketthuc" />
+                                                        <input type="hidden" asp-for="doan.Doanhthu" value="@item.Doanhthu" />
+                                                        <input type="hidden" asp-for="doan.Noidung" value="@item.Noidung" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
+                                                    </form>
                                                 </td>
                                             </tr>
                                         }
