Update Doan WebForm- HocVT

--- a/WebForm/Pages/Shared/QuanLyDoan.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan.cshtml
@@ -52,7 +52,7 @@
                                                 <td>@item.Noidung</td>
                                                 <td>
                                                     <form method="post">
-                                                        <input type="hidden" asp-for="doan.Id_Tour" value="@item.Id_Doan" />
+                                                        <input type="hidden" asp-for="doan.Id_Doan" value="@item.Id_Doan" />
                                                         <input type="hidden" asp-for="doan.Ten_Doan" value="@item.Ten_Doan" />
                                                         <input type="hidden" asp-for="doan.Id_Tour" value="@item.Id_Tour" />
                                                         <input type="hidden" asp-for="doan.Ngaykhoihanh" value="@item.Ngaykhoihanh" />
